# ElvishKernel

./: CMakeLists.txt  README.md  build.sh  clean.sh  elf-toolchain.cmake  makeiso.sh  onefilemakeiso.sh
builds/prevbuilds/: v0.iso
config/: config.sh  headers.sh
src/: CMakeLists.txt  kernel_main.c  tutorial_kernel.c
src/base/: Makefile  kernel.c  linker.ld  main.c  onefile.c
src/base/assembly/: boot.S  tutorial_boot.s
src/base/include/: screen.h  system.h
src/base/includes/: screen.h  system.h
src/base/src/: gdt.c  screen.c  system.c
src/kernel_base/: CMakeLists.txt
src/kernel_base/src/: screen.c
src/lib/: Makefile  string.c
src/lib/include/: stdio.h  string.h
